# jarvis

./: .clift.yaml  .env  .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yaml  module.yaml
.github/workflows/: ci.yml
.vhs/: brief.tape  coffee.tape  doctor.tape  focus.tape  note.tape  remind.tape  standup.tape  status.tape  task.tape
cmds/brief/: Taskfile.yaml  brief.install.sh  brief.sh
docs/: ndjson-contract.md
jarvis-cal/: Cargo.toml
jarvis-cal/src/: gcalcli.rs  ics.rs  main.rs  ndjson.rs  parity.rs  time.rs
jarvis-state/: focus.go  frontmatter.go  go.mod  main.go  note.go  parity.go  slug.go  stats.go  store.go  task.go
lib/: frontmatter.sh  slug.sh
scripts/: build_cal.sh  build_ndjson_golden.py  build_state.sh  build_when.sh  record-demos.sh
templates/: 1on1.md  daily.md  meeting.md  postmortem.md
tests/: brief.bats  brief_install.bats  build_idempotent.bats  cache_file.bats  cal.bats  calendar_applescript.bats  calendar_gcalcli.bats  calendar_ics.bats  calendar_provider.bats  cleanup.bats  cleanup_install.bats  coffee.bats  doctor.bats  focus.bats  focus_log.bats  focus_roundtrip.bats  focus_stats.bats  frontmatter.bats  helper.bash  integrations_deploys.bats  integrations_gh.bats  integrations_git.bats  integrations_jira.bats  integrations_oncall.bats  meeting.bats  meeting_url.bats  native_clock.bats  native_protocol.bats  ndjson_corpus_sanity.bats  ndjson_parity.bats  note_add.bats  note_archive.bats  note_completion.bats  note_current.bats  note_daily.bats  note_edit.bats  note_index.bats  note_link.bats  note_list.bats  note_meeting.bats  (+50 more)
(+200 files in other folders)
