[package]
name = "jarvis-cal"
version = "0.1.0"
edition = "2021"
description = "ICS + gcalcli TSV → unified NDJSON event stream for jarvis"

[[bin]]
name = "jarvis-cal"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = { version = "0.9", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = false
strip = true
panic = "abort"
